# workshop-recommended-practices

./: requirements.txt
flake8-plugin/: flake8_breakpoint.py  setup.cfg  test.py
