[metadata]
name = flake8-breakpoint
version = 0.0.1
description = A flake8 plugin to check for calls to breakpoint()
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
py_modules = flake8_breakpoint
include_package_data = True
install_requires =
    flake8>=3.0,!=3.2.0,<4
python_requires = >=3.6
zip_safe = False

[options.entry_points]
flake8.extension =
    B = flake8_breakpoint:BreakpointChecker
